force-app/main/default/objects/Budget__c/fields/Budget_Category__c.field-meta.xml
<CustomField>
    <fullName>Budget_Category__c</fullName>
    <label>Budget Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>