force-app/main/default/objects/Budget__c/fields/OA_Budget_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>OA_Budget_Internal_ID__c</fullName>
    <externalId>true</externalId>
    <label>OA Budget Internal ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>