force-app/main/default/objects/Budget__c/fields/OA_Project_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>OA_Project_Internal_ID__c</fullName>
    <label>OA Project Internal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>